k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrum-poker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /scrum-poker
            pathType: Prefix
            backend:
              service:
                name: scrum-poker
                port:
                  number: 80
